Add more validation and handle fetch data

--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -1,5 +1,9 @@
 entity.notfound=Không tìm thấy đối tượng
 entity.notfound.id={0} không tồn tại với ID: {1}
 entity.notfound.value={0} không tồn tại với giá trị: {1}
-account.number.notblank=Tài khoản không được để trống
+notblank.users.name=Tên không được để trống
+notblank.users.email=Email không được để trống
+notblank.users.mobileNumber=Số điện thoại không được để trống
+exist.mobile.number=Số điện thoại này đã được đăng ký
+exist.email=Email này đã được đăng ký
 server.error.internal=Lỗi từ hệ thống nội bộ
