--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,4 @@ notblank.users.mobileNumber=Phone number must not be blank
 exist.mobile.number=Phone number already exist
 exist.email=Email already exist
 server.error.internal=Internal Server Error
+record.notfound=The system did not find any records in the database  
