--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -7,3 +7,4 @@ notblank.users.mobileNumber=Số điện thoại không được để trống
 exist.mobile.number=Số điện thoại này đã được đăng ký
 exist.email=Email này đã được đăng ký
 server.error.internal=Lỗi từ hệ thống nội bộ
+record.notfound=Hệ thống không tìm thấy bất kỳ bản ghi nào trong cơ sở dữ liệu
